--- a/book.org
+++ b/book.org
@@ -335,7 +335,7 @@ Not everyone was of this mind. Verk was staying in the burrow just two down from
 
 The relief-burrow was positioned and shaped for optimal sound-deadening, for reasons that would utterly relate to modern readers. It was shaped, looking top-down, something like a daisy; scalloped around the perimeter so that sound would naturally dampen. The walls were also gently bowed outward from top-to-bottom. It offered the predictable visibility and view-ability characteristics of a large, circular room, but didn't have the /acoustical/ characteristics of a large, circular room. Get it?
 
-There was a constant, rather soothing, gurgle and plash of water. Although minimal and somewhat temperamental, the cave system had a small number of spring-fed water works. The relief-burrow was by a wide margin the biggest consumer of water. The Crav thought it all pretty clever and eminently maintainable: The circular room had a slight, very inconspicuously conical floor that was highest at the center and had a "one part down for each one half of one boulder-door parts over[fn:: 1:50]" grade; enough to keep the entire room's floor (8 man diameter) covered in a sheet of two bowstring-finger-knuckle deep, rapidly moving water[fn:: Astonishing fact: After the decline and fall of the Crec and surrounding culture, the next time a similarly-shaped water feature appeared on earth it would be called "The Super Slippery Fun Lagoon", appearing in a New Jersey water park called 'Garden State Water World' in 1934. nb: too goddamn silly.] from the center, where an immense gurgling pot of cold water overflowed continuously.
+There was a constant, rather soothing, gurgle and plash of water. Although minimal and somewhat temperamental, the cave system had a small number of spring-fed water works. The relief-burrow was by a wide margin the biggest consumer of water. The Crav thought it all pretty clever and eminently maintainable: The circular room had a slight, very inconspicuously conical floor that was highest at the center and had a "one part down for each one half of one boulder-door parts over[fn:: 1:50]" grade; enough to keep the entire room's floor (8 man diameter) covered in a sheet of two bowstring-finger-knuckle deep, rapidly moving water from the center, where an immense gurgling pot of cold water overflowed continuously.
 
 This was enough to create two small semicircular rivers from the entrance side of the room, around each half-circle of gutter, to the opposite side, closest to the hill's exterior, for the whole circular gutter was slightly tilted in this way. Once the water met the far side of the room (Where Grav noticed some mesmerizing patterns made by the two "rivers" colliding head-on.), it finally exited the room through a few arm-sized holes heading down what everyone always though of as "the back of the mountain".
 
@@ -2011,6 +2011,7 @@ Everything is subject to change, eebureetang. But you'll have to retitle if we d
 
 ** Notes
 
+- It would be neat to describe the "toys" given away by thag.
 - Slates of some drawing or other are taken to the [you need to talk about couriers] the hubs of the network, where, if it is appropriate[fn:: when], they are hastily copied and sent on to the next "node". This results in a "telephone game" effect in a visual sense, as drawings are gradually distored or "interpreted". Specifically, the Ender's-Stump is clearly /interpreted/ by the slate-picture <-xxx people. The go for a hundred palm in one direction and they can see "oh, it looks like a fish in these parts", etc.
 - Modern humans fear death in the same way the Crec fear a painful or horror-filled death.
 - Wouldn't it be cool if Jurd had some "audio problems" and Thag had to struggle out there in front of hundreds of kids silently for a quarter palm.
