--- a/book.org
+++ b/book.org
@@ -732,7 +732,7 @@ Having moved the sluice downstream, and with the river still rather low, they re
 
 "Nope."
 
-Grav and Gog got their gear together, knowing that this was enough for one day. It was only one-palm-after-noon or so but they hadn't intended to make a full day out of only this, and Gog hadn't expected to get drug into a greased-obsidian-hatchling chase[fn:: A 'wild goose chase'. The greased hatchling chase was a drunken, sadistic mob activity that for some reason also involved much more butt-slapping than is normally observed. This was neither acknowledge nor understood by the Crec. The 'grease' came from the mother, which had been eaten. If there was a sufficiently feisty, scruffy, angry chick hopping around screeching as the men ate leisurely, they would, given enough end-of-the-hunt juff and spirit, catch and chuck the bird into its mother's self-made frying oil, where it would immediately hop out, now bald, greasy, furious and in pain, and having no more interest in anything but escape, would bolt into the woods. If a man caught it, he was permitted one copulation with the wife of his choosing, from any of the men.]. On some days, the exhaustion told you it was time to quit before the sun did.
+Grav and Gog got their gear together, knowing that this was enough for one day. It was only one-palm-after-noon or so but they hadn't intended to make a full day out of only this, and Gog hadn't expected to get drug into a greased-obsidian-hatchling chase[fn:: A 'wild goose chase'. The greased hatchling chase was a drunken, sadistic mob activity that for some reason also involved much more butt-slapping than is normally observed. This was neither acknowledged nor understood by the Crec. The 'grease' came from the mother, which had been eaten. If there was a sufficiently feisty, scruffy, angry chick hopping around screeching as the men ate leisurely, they would, given enough end-of-the-hunt juff and spirit, catch and chuck the bird into its mother's self-made frying oil, where it would immediately hop out, now bald, greasy, furious and in pain, and having no more interest in anything but escape, would bolt into the woods. If a man caught it, he was permitted one copulation with the wife of his choosing, from any of the men.]. On some days, the exhaustion told you it was time to quit before the sun did.
 
 They passed through the "interesting pile" and toed around as they always do out of habit. Gog, with his toe, not bothering to bend down, pushed around some head-sized rocks to see underneath, as a strategy for maximizing rocks-inspected for given effort. He could indeed "toe" entire torso sized boulder, to an extent, having an intimate understanding of rock dynamics and legs that were made out of iron-tree[fn:: Yes, the very same tree with the very same name.].
 
@@ -740,7 +740,7 @@ One rock that he had only touched with his toe, and then reconsidered, moving on
 
 "What the sew?", said Gog, who was the only one able to connect the sound with the cleanly split rock just next to his foot. Grav turned and followed Gog's gaze, instantly making a face to match his; one of wonderment.
 
-The oddly uniform, oddly oval, oddly beautiful-on-its own stone had been split in two by a perfectly flat planer separation that Gog had to repeatedly swear there was no hint of before the audible crack.
+The oddly uniform, oddly oval, oddly beautiful-on-its own stone had been split in two by a perfectly flat planar separation that Gog had to repeatedly swear there was no hint of before the audible crack.
 
 Already the two men knew they were the caretakers of one of the most wondrous objects anyone had ever seen[fn:: They would have sought traffic cones and bright black-yellow tape if they knew of such.]. From each side, both of them scuttled downward along the slight grade toward the stone and knelt on one knee to look.
 
@@ -754,7 +754,7 @@ They beheld a smooth, uniform, grey egg-shaped stone about 3 pinkie-thumb on its
 
 Peering inside, between the gap, to see exactly what was there was frustratingly hard, as the crack was no more than a few leaves in breadth. A nearby hand mirror helped some with the light, but it glittered so loudly on the inside that the line made by the crack was more or less just a whiteish-blue and solid glow when lit, and black when not.
 
-"We /have/ to pick this thing up and some how check it out, but I am terrified that we'll break something inside that is likely to be a once-in-life find.", Grav said while thinking. "You know... that thing is /heavy/ I remember it specifically, admiring how smooth and perfect it is. I had to give it an extra good heave, as you'd guess, but it managed to fly a bit high, despite my instincts and landed here with a very solid 'crack'. And /that/ didn't do this. Your /toe/ did? I was sure I'd have to scurry out and throw it the rest of the way. It was like it had wings."
+"We /have/ to pick this thing up and somehow check it out, but I am terrified that we'll break something inside that is likely to be a once-in-life find.", Grav said while thinking. "You know... that thing is /heavy/ I remember it specifically, admiring how smooth and perfect it is. I had to give it an extra good heave, as you'd guess, but it managed to fly a bit high, despite my instincts and landed here with a very solid 'crack'. And /that/ didn't do this. Your /toe/ did? I was sure I'd have to scurry out and throw it the rest of the way. It was like it had wings."
 
 "We should maybe start by removing some silt? Maybe pour a few gourd of water on it while we work? Go get some, would ya? Our drinking gourds are just upstream. I mean, yeah... I'm like you; the suspense is killing me.", said Gog.
 
@@ -776,9 +776,9 @@ They worked their way up and down slopes, trying to keep things gentle and smoot
 
 Midway through the clearing between the closest of the worked river basin and the beginning of their office entranceway[fn:: which was 15 man long and had a side passage or two along the way: Office supplies, miscellaneous.], both sticks suddenly and unexpectedly snapped where they came closest to the rock. The precious bundle was allowed to fall a good half-man onto an inconveniently placed sharp rock (which was probably not even necessary.)
 
-There was no longer any need to discuss how to get the thing open and which long and painful protocols to follow. The great stone egg gave up its secrets right there on the muddy clearing, both halves rocking almost mockingly for a bit with the "yolk" sliding back and forth on the smooth inner surface, free from its perfect cradle, refusing to fall back in place, or over the verge.
+There was no longer any need to discuss how to get the thing open and which long and painful protocols to follow. The great stone egg gave up its secrets right there on the muddy clearing, both halfs rocking almost mockingly for a bit with the "yolk" sliding back and forth on the smooth inner surface, free from its perfect cradle, refusing to fall back in place, or over the verge.
 
-The two men, useless sticks in hand, stared silently as the two halves came to a standstill.
+The two men, useless sticks in hand, stared silently as the two halfs came to a standstill.
 
 They stared some more.
 
@@ -830,7 +830,7 @@ So we found a lifetime value-stone. So what? Do you expect Father-Brother-Wife K
 
 "Exactly!"
 
-They decided that lining the cradle with two of the thinest leaves they could find and packing the whole thing as it was found, more or less, was the safest way for it to travel. After lightly scrubbing the triune of mysterious stone with the finest silt they could find, applied with a handful of soft, green leaves, they rinsed all in a clean part of the river and let the pieces dry on the open floor for a palm or two and talked.
+They decided that lining the cradle with two of the thinnest leaves they could find and packing the whole thing as it was found, more or less, was the safest way for it to travel. After lightly scrubbing the triune of mysterious stone with the finest silt they could find, applied with a handful of soft, green leaves, they rinsed all in a clean part of the river and let the pieces dry on the open floor for a palm or two and talked.
 
 "Let's just decide right here and now that neither of us are going to crack. It's like a secret you're sworn to keep, except in this case you are obliged to always keep up an act: We have no idea it looks like the massive, fully grown caveman's throbbing pebble-twig. We think it looks more like a kind of fish we saw once; exactly like that kind of fish!
 
@@ -846,7 +846,7 @@ We're hopelessly biased in that direction. We are deaf to the innuendos of even 
 
 Gog: "Yep."
 
-"So, as absurd as everything that has happened in the last 10 palms is, I think we need to focus, as I assume we are caring that sinful bulk back with us.", said Grav.
+"So, as absurd as everything that has happened in the last 10 palms is, I think we need to focus, as I assume we are carrying that sinful bulk back with us.", said Grav.
 
 The two men carefully packed the bundle as described, then wrapped the assembled "egg" in alternating layers of dense, soft leaves and twist-vine, resulting in a safe, padded ball. It was still deeply perplexing that the whole bundle had fallen apart seemingly spontaneously.
 
@@ -874,13 +874,13 @@ All invited were present, introductory remarks made, grateful nods made towards 
 
 Grav and Gog stood smiling awkwardly. The crowd was too small and close for there to be any idea which direction to face. They felt on display as well, with Verk maybe doling out a bit too much praise to keep the boys' sense of obligation sharp.
 
-Verk did a triple-take with a broad, yellow smile for the clan portraitist and anyone else with a keen memory. He pried the two halves apart with a fine, glittering Sky Clam halve[fn:: These were found on the top of nearby /Mnt. Fishes/. No one knew how or why.] and a healthy-looking, tough, thick, velvety leaf which he used to protect the perimeter of the mirror-stone-like finish he had been assured he would find, among other wonders that he insisted remain a surprise.
+Verk did a triple-take with a broad, yellow smile for the clan portraitist and anyone else with a keen memory. He pried the two halfs apart with a fine, glittering Sky Clam half[fn:: These were found on the top of nearby /Mnt. Fishes/. No one knew how or why.] and a healthy-looking, tough, thick, velvety leaf which he used to protect the perimeter of the mirror-stone-like finish he had been assured he would find, among other wonders that he insisted remain a surprise.
 
 The two men had never felt this kind of intense, surreal terror before. Either their predict-thought was correct, and Verk would not /see/ what was there, or he would immediately see a fine, sparkling, extra-large false-rock-stick that would, should such a thing even exist outside of caveboy talk, be hidden carefully under feet of bat-scat in the very back of one's cave[fn:: which kept it quite warm.].
 
-Verk grunted the desperate grunt of the soon-dying and heaved the top halve upward, balancing it on the opposite, thick end of the "egg". The top halve slid slightly to warn of its instability.
+Verk grunted the desperate grunt of the soon-dying and heaved the top half upward, balancing it on the opposite, thick end of the "egg". The top half slid slightly to warn of its instability.
 
-Gog and Grav each picked up the fatter, heavier end, one on each side, softly grunting in sympathy. The three men walked the top halve over to one side, flipped it slowly and set its rounded, dull-gray side on a blanket of fresh leaves. Gog could see the revealed form laying in the bottom halve. Grav was walking his share along with his head turned away, but both men felt the same hopeless terror combined with an oddly sweet giddiness.
+Gog and Grav each picked up the fatter, heavier end, one on each side, softly grunting in sympathy. The three men walked the top half over to one side, flipped it slowly and set its rounded, dull-gray side on a blanket of fresh leaves. Gog could see the revealed form laying in the bottom half. Grav was walking his share along with his head turned away, but both men felt the same hopeless terror combined with an oddly sweet giddiness.
 
 "My sweet Ender-Of-Questions, in its hammock above!", Verk covered his open mouth with the fingertips of both hands in a somewhat dainty gesture, and smiled warmly. "It is /astonishing/.", stretching the syllables.
 
@@ -1361,7 +1361,7 @@ And /Stay low to Scrub!/
 Kids, don't forget to pick up your free toys and ask as many questions you like of our volunteers!!
 #+end_quote
 
-Thag made his most enthusiastic wave goodbye. His one arm being a disproportionate part of his body's mass when compared to most, he almost made the flippy-flop of an unstrung bow, with both the upper and lower halves moving more or less equally, all the while grinning ghoulishly.
+Thag made his most enthusiastic wave goodbye. His one arm being a disproportionate part of his body's mass when compared to most, he almost made the flippy-flop of an unstrung bow, with both the upper and lower halfs moving more or less equally, all the while grinning ghoulishly.
 
 * Bird :noexport:
 
@@ -2026,7 +2026,7 @@ Everything is subject to change, eebureetang. But you'll have to retitle if we d
   - "hi"
 - Are there airquotes in Crec-world?
 - Naming surrounding the rock-stick-rocks:
-  - The three pieces share a single name. There is no name for the rock-weener by itself or the halves.
+  - The three pieces share a single name. There is no name for the rock-weener by itself or the halfs.
   - It is known to all as Ender's-Sword.
   - G&G call it Ender's-Stump but only amongst themselves.
   - G&G have their own name, which they share with nobody. They got tired of making finger quotes.
