--- a/gog.org
+++ b/gog.org
@@ -1843,10 +1843,7 @@ The beds were also remarkably modern. The were made from wooden planks set atop 
 
 The "mattress" was a nearly whole aurochs skin that had been worked soft and squared off here and there to make a rectangle matching the bed's plank in size.
 
-The rectangular aurochs skin was then stuffed with long, springy spruce coils[fn:: When drawn with the right tool, the result was a spiral about a fist in diameter, a kind of wood coil. These were allowed to dry and cut into lengths of about a palm, resulting in a spiral of springy spruce describing a cylinder about a palm in diameter and, with four or five revolutions comprising its length, about a palm long. These were very 'light' as springs go. They could be compressed with about a gourd of weight, but in the thousands, all just tossed in at random angles, they intertwined and made a comfortable rectangle of springiness. Mattresses were sometimes family heirlooms three or more generations old, again, only amongst the elite.].
-
-
-This was sewn on the "under" side[fn:: Being the underside of the aurochs, but as a mattress, the stitched sized was facing the wall.].
+The rectangular aurochs skin was then stuffed with long, springy spruce coils[fn:: When drawn with the right tool, the result was a spiral about a fist in diameter, a kind of wood coil. These were allowed to dry and cut into lengths of about a palm, resulting in a spiral of springy spruce describing a cylinder about a palm in diameter and, with four or five revolutions comprising its length, about a palm long. These were very 'light' as springs go. They could be compressed with about a gourd of weight, but in the thousands, all just tossed in at random angles, they intertwined and made a comfortable rectangle of springiness. Mattresses were sometimes family heirlooms three or more generations old, again, only amongst the elite.]. This was sewn on the "belly"[fn:: Being the underside of the aurochs, but as a mattress, the stitched sized was facing the wall.] side where the animal was opened
 
 xxx need to further describe the "structures" under the palace roof.
 
