--- a/gog.org
+++ b/gog.org
@@ -1367,11 +1367,11 @@ Thag made his most enthusiastic wave goodbye. His one arm being a disproportiona
 
 Grav and Gog were faced with spending the night, baring a miracle, in the most dangerous place possible, only because a much greater danger had recently moved into the area, like bad weather, but worse.
 
-This was part of the life-long education the men had about lizard-birds.  The woods were safer but not safe. It also was the only reasonable choice with a lizard-bird is in the area.
+This was part of the life-long education the men had about lizard-birds.  The woods were safer but not safe. It also was the only reasonable choice with a lizard-bird in the area, most of all at night.
 
-This was definitely toward the end of the curriculum, but they both knew the approximate odds of either choice, and chose the least bad: They would be spending the night on the edge of Small Woods somehow or other.
+This was definitely toward the end of the curriculum, but they both knew the approximate odds of either choice, and chose the least bad: They would be spending the night on the edge of Small Woods, somehow or other.
 
-The forest-child stood and stared at the two, both lost in thought.
+The forest-child stood and stared at the two who were both lost in thought.
 
 He made the eyes-widening, brow-rising, cock to the head "/well?!/" expression that all humans know.
 
@@ -1379,7 +1379,7 @@ He made the eyes-widening, brow-rising, cock to the head "/well?!/" expression t
 
 "Yes.", agreed Gog. Then after a pause, "What is he asking us?"
 
-The forest-child made a mock jog in the direction he had been heading and then again: "/well?/"
+The forest-child made a mock jog in the direction he had been heading and then again, "/Well?/"
 
 Grav and Gog looked at each other. Not having a preference for /where/ along the margin of the dangerous woods they would sleep, at least generally, they gave in and mimed that they would go with him. "After you, sir", was their chosen gesture of response.
 
@@ -1389,7 +1389,7 @@ In the growth strata of most jungle or woods, there was a fairly consistently un
 
 There were juicy, mostly edible or at least useful ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple-height for an adult Crec.
 
-But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above, which is a good thing as this is also a strata where spines and poisons were in wider use to shoo away anything that might disturb their peaceful plant-life.
+But a /baby/ could trek along unbothered by anything other than what for /him/ would be light knee-high, dewy, soft green leaves, with the next layer of green being, again for him, one or two heads above. This is a good thing as this was also the first strata featuring wide use of spines and poisons.
 
 For the men, this meant a walk through thick, chest-high bush that was all painful or uncomfortable in some way or other. In addition to the irritable plant life, not a few cantankerously deadly fauna lived in this layer too. This was the whole reason for established paths after all!
 
