--- a/gog.org
+++ b/gog.org
@@ -1395,7 +1395,7 @@ For the men, this meant a walk through thick, chest-high bush that was all painf
 
 A Crec ecology text book could easily have used a picture of this bit of woods to illustrate these concepts.
 
-The men, their spears now being employed as brush clearing blades[fn:: They did have great knives of bronze capable for example stabbing a person clean through or slicing off a thumb, but as the spins and tougher leaves employed a lot of silica, the edge was quickly warn. Also if clearing a one-time path through the woods involves a lot of cutting, you're doing it wrong.], at which they were barely more useful than any other stick, were swatting away face-sized, muscular, quick spiders, all-but-invisible small, green vipers, and the occasional poisonous frog or centipede[fn:: And the pretenders of these, who they could immediately identify as harmless, even at this pace, and would try not to wantonly kill.]. The brush was a secondary concern here. They had to compromise comfort to a degree, given the more important preservation of life.
+The men, their spears now being employed as brush clearing blades[fn:: They did have great knives of bronze capable for example stabbing a person clean through or slicing off a thumb, but as the spins and tougher leaves employed a lot of silica, the edge was quickly warn. Also if clearing a one-time path through the woods involves a lot of cutting, you're doing it wrong.], at which they were barely more useful than any other stick, were swatting away face-sized, fat spiders; small, green vipers; and the occasional poisonous frog or centipede[fn:: And the pretenders of these, who they could immediately identify as harmless, even at this pace, and would try not to wantonly kill.]. The brush was a secondary concern here. They had to compromise comfort to a degree, given the more important preservation of life.
 
 Bringing a spearhead down flat and sharply on top of some of the bigger spiders would make an audible "pop", with a spray spider guts. The two men would sometimes try to get the other with a good spray of spider guts with an expertly angled swat of the spearhead[fn:: In the modern game of golf, this is known as a 'chip'.]. It was a kind of game they had.
 
