--- a/gog.org
+++ b/gog.org
@@ -1405,11 +1405,13 @@ Though he had a mostly normal speaking voice, if a bit high-pitched, his singing
 
 It was getting dark, but was not yet killing-palm. The forest-child seemed unbothered, and was now making occasional tight turns, as though the party had switched to surface streets and was almost home. There seemed to be a /destination/ coming up.
 
-Revealed slowly as they rounded a larger low tree, they could see a sort of hide that was clearly not Natural but was just as clearly very old.
+Revealed slowly as they rounded a larger low tree, they could see a sort of hide that was clearly Unnatural[fn:: This had a distinctly positive connotation. It had the sense of 'made by skilled cavepeople for utility and comfort.'] but was just as clearly very old.
 
 xxx they remark repeatedly about the stink.
 
-It was made out of stone that had been squared off mostly <-xxx. Where it was irregular, it appeared more that this was due to erosion of some kind. One could imagine it being /quite/ square in the past. It had a look that the men would both have described as "Unnatural"[fn:: This had a distinctly positive connotation. It had the sense of 'made by skilled cavepeople for utility and comfort.'].
+It was made out of stone that had been squared. They were entirely faceted with flat surfaces, the surfaces being adapted to meet those of adjoining stones.
+
+Any roundness found in the stones appeared to be from erosion of some kind. One could imagine it being /quite/ square in the past. It had a look that the men would both have described as "Unnatural".
 
 The fine but irregular joints <-xxx better word xxx between the stones gave the impression that the creators had balanced finding appropriately-shaped stones with the trouble of removing material to create a finer fit. The joints between the stones did not make a regular, geometric pattern like one would see in modern block construction. The lines between the stones were more jagged and irregular, but in a pleasing way, and all with but fine lines to describe the places where the stones met, except where erosion had widened these.
 
