--- a/gog.org
+++ b/gog.org
@@ -1409,7 +1409,7 @@ Revealed slowly as they rounded a larger low tree, they could see a sort of hide
 
 xxx they remark repeatedly about the stink.
 
-It was made out of stone that had been squared. They were entirely faceted with flat surfaces, the surfaces being adapted to meet those of adjoining stones.
+It was made out of stone that had been squared. The stones were entirely faceted with flat surfaces cut to meet those of adjoining stones. But the patterns made by these joints on the outer walls were irregular. The wall was none the less very flat both inside and out.
 
 Any roundness found in the stones appeared to be from erosion of some kind. One could imagine it being /quite/ square in the past. It had a look that the men would both have described as "Unnatural".
 
