--- a/gog.org
+++ b/gog.org
@@ -1465,13 +1465,13 @@ The worst part of the night, they were sure, was going to be sharing a small bur
 
 In the cheerful glow[fn:: For that is what it was.] of the lamp, the two men scanned the walls for anything bit-y. There was an especially hideous land-crab[fn:: Crec knew plenty about crabs. They were 'exotic' this far away from any source, but they knew well the body plan, the innards, and the delightful /taste/ of crab. The shells were always kept around for some user or other. All you needed was a rich uncle willing to let you sift through his garbage. Being familiar, somewhere far back in the Crecspeak family tree, someone noticed that this spider, the variety they shared the hide with, looked very much like a crab, had a lot of the same kinds of spines, made a similar clicking when crawling along rock, and provided an almost identical eating experience to their "delicacy" cousins. They were more plentiful, but tasted distinctly worse than actual crab, so it was more "just a name" except to the very hungry. And they were harmless. Huge, but harmless. And also slow and shy until startled.] and a few millipedes that one would not want to touch[fn:: Nothing capable of spraying.].
 
-And right in the middle was a pile of burnt bones and cold coals.
+And right in the middle was a pile of burnt bones and cold coals. <-xxx seems like something you need to get back to.
 
 Having gotten snugly into their hide-burrow and it now being properly dark, as best they could tell in the dark wood, Grav and Gog talked at length about their predicament and plans.
 
 For one, they would have to awake and get running dangerously early in order too beat conch. They would get docked by xxx for not having shaved[fn:: xx] and not wearing their rhino-calf chest armor[fn:: xxx].
 
-The last palm of woods would not be entirely quiet at that time. Missing conch was punishable[fn:: xxx] and they were balancing the penalty for that with the reckoned odds of getting eaten by one thing or another along the way.
+The last palm of woods would not be entirely quiet at that time, there being early-risers among predators tooyyy. Missing conch was punishable[fn:: xxx] and they were balancing the penalty for that with the reckoned odds of getting eaten by one thing or another along the way.
 
 It was not unusual for a lizard-bird to continue its hunt until early morning, even after dawn. The men did have clear skies and a sliver of morning-moon in their favor.
 
@@ -2032,6 +2032,7 @@ Everything is subject to change, eebureetang. But you'll have to re-title if we 
 
 ** Bugs
 
+- Sure seems like they should look around more walking in the dangerous woods.
 - Suddenly we introduce "father" as a "term of respect" in chapter 4, yet there were probably many other places where it could be used. Maybe an appendix section on these kinds of "terms" and different speech "registers"..?
 - Verk's joke on Lu makes no sense with the level of sophistication they have. Even if you say "well, after the club wars they had a big Renaissance thing", the hide they share with Oh-Mas is clearly sophisticated, but also way before Crec times BUT the Momma Bear Palace (or whatever) is obviously wicked grand, and yet they did not know to /tie a rope to a boulder and yank it out of the way/?
 - It seems like Grav "retires to his burrow" a few too many times, probably creating an inconsistency.
