--- a/gog.org
+++ b/gog.org
@@ -1471,7 +1471,7 @@ Having gotten snugly into their hide-burrow and it now being properly dark, as b
 
 For one, they would have to awake and get running dangerously early in order too beat conch. They would get docked by xxx for not having shaved[fn:: xx] and not wearing their rhino-calf chest armor[fn:: xxx].
 
-The last palm of woods would not be entirely quiet at that time, there being early-risers among predators tooyyy. Missing conch was punishable[fn:: xxx] and they were balancing the penalty for that with the reckoned odds of getting eaten by one thing or another along the way.
+The last palm of woods would not be entirely quiet at that time, there being early-risers among predators too. Missing conch was punishable[fn:: xxx] and they were balancing the penalty for that with the reckoned odds of getting eaten by one thing or another along the way.
 
 It was not unusual for a lizard-bird to continue its hunt until early morning, even after dawn. The men did have clear skies and a sliver of morning-moon in their favor.
 
