--- a/gog.org
+++ b/gog.org
@@ -1489,7 +1489,7 @@ He had packed a large pipe and was lighting a twig to get things going.
 
 There was a lot to know about the smoking of plant matter in the ancient jungle and woods.
 
-Grav and Gog were instantly curious. There were so many plants in Nature, and so little time to experiment that those from strange parts, /even if those parts had all the same plant life/, had new discoveries to relay, and usually visa versa. It took a lot of research. In this, ancient people were experts.
+Grav and Gog were instantly curious. There were so many plants in Nature, and so little time to experiment that those from strange parts, /even if those parts had all the same plant life/ had new discoveries to relay, and usually visa versa. It took a lot of research. In this, ancient people were experts.
 
 He had no whole leaves that they could inspect. Grav and Gog took small pinches as specimens and stored them safely in case it turned out there was important medicinal knowledge at stake.
 
