--- a/gog.org
+++ b/gog.org
@@ -1489,7 +1489,7 @@ He had packed a large pipe and was lighting a twig to get things going.
 
 There was a lot to know about the smoking of plant matter in the ancient jungle and woods.
 
-Grav and Gog were instantly curious. There were so many plants in Nature, and so little time to experiment that those from strange parts, /even if those parts had all the same plant life/ had new discoveries to relay, and usually visa versa. It took a lot of research. In this, ancient people were experts.
+Grav and Gog were instantly curious. There were so many plants in Nature, and so little time to experiment that those from strange parts, /even if those parts had all the same plant life/xxxxx had new discoveries to relay, and usually visa versa. It took a lot of research. In this, ancient people were experts.
 
 He had no whole leaves that they could inspect. Grav and Gog took small pinches as specimens and stored them safely in case it turned out there was important medicinal knowledge at stake.
 
@@ -2049,6 +2049,7 @@ Everything is subject to change, eebureetang. But you'll have to re-title if we 
 
 ** Notes
 
+- In he hide, the men were having a kind of "shared dream" before the cat came. /That's why it was quickly forgotten by them/. They recall much later.
 - It would be neat to describe the "toys" given away by Thag.
 - Slates of some drawing or other are taken to the [you need to talk about couriers] the hubs of the network, where, if it is appropriate[fn:: when], they are hastily copied and sent on to the next "node". This results in a "telephone game" effect in a visual sense, as drawings are gradually distorted or "interpreted". Specifically, the Ender's-Stump is clearly /interpreted/ by the slate-picture <-xxx people. The go for a hundred palm in one direction and they can see "oh, it looks like a fish in these parts", etc.
 - Modern humans fear death in the same way the Crec fear a painful or horror-filled death.
