--- a/gog.org
+++ b/gog.org
@@ -1489,7 +1489,7 @@ He had packed a large pipe and was lighting a twig to get things going.
 
 There was a lot to know about the smoking of plant matter in the ancient jungle and woods.
 
-Grav and Gog were instantly curious. There were so many plants in Nature, and so little time to experiment that those from strange parts, /even if those parts had all the same plant life/xxxxx had new discoveries to relay, and usually visa versa. It took a lot of research. In this, ancient people were experts.
+Grav and Gog were instantly curious. There were so many plants in Nature, and so little time to experiment that those from strange parts, /even if those parts had all the same plant life/ had new discoveries to relay, and usually visa versa. It took a lot of research. In this, ancient people were experts.
 
 He had no whole leaves that they could inspect. Grav and Gog took small pinches as specimens and stored them safely in case it turned out there was important medicinal knowledge at stake.
 
@@ -1513,7 +1513,7 @@ After watching this and then mindlessly accepting the pipe from Gog, Grav's next
 
 He and Gog were laying on the floor face-up, with the tops of their heads a palm apart and each man's feet extending towards the hide's walls.
 
-They were both staring at the ceiling. They had been in a long, convoluted conversation following some of the most inspired trains of thought he could recall when he "came to". He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detached and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
+They were both staring at the ceiling. They had been in a long, convoluted conversation following some of the most inspired trains of thought he could recall when he "came to". Grav immediately felt the frustration of an interesting dream slipping away as tried to recall what they had been talking about, and as with his dreams it seemed like the memories were actively running away from him. He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detached and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
 
 The thing that brought his sick-monkey around was Oh-Mas snarling out at the opening, spear at the ready, and a more or less normal, though very slow and very loud breathing from an all-finger all-finger all-finger gourd predator of some kind. Most likely a tooth-cat.
 
