--- a/gog.org
+++ b/gog.org
@@ -1519,7 +1519,7 @@ The thing that brought his sick-monkey around was Oh-Mas snarling out at the ope
 
 They could see the very tip of one claw slipping in and out of the vine-work nearest the stone. The mass of vine was probably three parts of four of one pinkie-thumb in thickness at the least. The claw, whoever's claw, was at least that long.
 
-And it belonged to an animal smart enough to start work immediately on tearing the vine trap-way away from the hide altogether, which for an averaged sized male cat would mean sure death, as it could probably fit a good way into the opening and its reach was enough to at least mince you up sufficiently for dying.
+And it belonged to an animal smart enough to start work immediately on tearing the vine trap-way away from the hide altogether, which for an averaged sized male cat would mean sure death for them, as it could probably fit a good way into the opening and its reach was enough to at least mince you up sufficiently for dying.
 
 The gaps between the vine provided enough space for the Oh-Mas to jab it a few times pretty good, to which it audibly reacted, which is a good sign.
 
