--- a/gog.org
+++ b/gog.org
@@ -1525,7 +1525,7 @@ The gaps between the vine provided enough space for the Oh-Mas to jab it a few t
 
 Grav and Gog went back to staring at the ceiling.
 
-The competing battle cries got intense enough to interest them finally and they rolled their heads over to watch the show.
+The competing battle cries got intense enough to interest them finally and they rolled on their sides to watch the show.
 
 There would be no more talking for a while.
 
